aggiunta visualizzazione lavoratori ammessi

--- a/barCodeControl/index.html
+++ b/barCodeControl/index.html
@@ -76,5 +76,7 @@
         document.getElementById("codicefiscale").focus();
     </script>
 </body>
-
+<!-- ########### studia ##################
+https://qabiria.com/it/risorse/blog/cosa-e-markdown-come-si-usa
+######################################################### -->
 </html>
