aggiunto inizio navbar e cancellazione lavoratori ammessi

--- a/barCodeControl/index.html
+++ b/barCodeControl/index.html
@@ -12,6 +12,12 @@
 </head>
 
 <body>
+    <ul>
+        <li><a href="insertAllows.html">INSERIMENTO NUOVO LAVORATORE AMMESSO</a><br><br></li>
+        <li><a href="../index.html">VISUALIZZA LAVORATORI PRESENTI</a></li>
+        <li><a href="contact.asp">Contact</a></li>
+        <li><a href="about.asp">About</a></li>
+    </ul>
     <script>
 
         function putemploye(inputtype) {
@@ -69,8 +75,8 @@
         <br><br>
         <div id="showresult"></div>
         <br><br>
-        <a href="insertAllows.html" class="navigator">INSERIMENTO NUOVO LAVORATORE AMMESSO</a><br><br>
-        <a href="../index.html" class="navigator">VISUALIZZA LAVORATORI PRESENTI</a>
+
+
     </div>
     <script>
         document.getElementById("codicefiscale").focus();
@@ -79,4 +85,5 @@
 <!-- ########### studia ##################
 https://qabiria.com/it/risorse/blog/cosa-e-markdown-come-si-usa
 ######################################################### -->
+
 </html>
