--- a/showallows.html
+++ b/showallows.html
@@ -13,20 +13,27 @@
 
 <body>
     <script>
-        function editb(whattaIDedit) {
-            alert("modifica del record con id " + whattaIDedit);
-        }
-        function deleteb(whattaIDcancel) {
-            alert("cancellazione del record con id " + whattaIDcancel);
+        function deleteAllow(whattodel) {
+            $.ajax({
+                url: "deleteAllow.php",
+                type: "POST",
+                data: { whattarec: whattodel },
+                success: function (msg) {
+                    alert(msg);
+                    location.reload(true);
+                }
+            });
+
 
         }
+
+
         $.getJSON("allowWorkers.php", function (thedata) {
-            $.each(thedata.ammessi, function (e, elem) {
+            $.each(thedata.ammessi, function (i, elem) {
                 var rowNew = "<tr><td>" + elem.id + "</td><td>" + elem.codiceFiscale + "</td><td>" +
                     elem.nome + "</td><td>" + elem.cognome + "</td><td>" + elem.azienda + "</td><td>" +
                     elem.note + "</td><td>" + elem.workerkind + "</td>" +
-                    "<td><input type='button' value='MODIFICA' onclick='editb(" + elem.id + ")' /></td>" +
-                    "<td><input type='button' value='CANCELLA' onclick='deleteb(" + elem.id + ")' /></td></tr>";
+                    "<td><input type='button' value='CANCELLA' onclick='deleteAllow(" + elem.id + ")' /></td></tr>";
                 $(rowNew).appendTo("#jsondataallows");
             });
         });
