aggiunta barra di navigazione

--- a/index.html
+++ b/index.html
@@ -187,8 +187,15 @@
 
         }
     </script>
-    <a href="barCodeControl" class="navigator">VAI AD ACCESSO LAVORATORI</a>
-    <br><br>
+    <ul>
+        <li><a href="barCodeControl/insertAllows.html">INSERIMENTO NUOVO LAVORATORE AMMESSO</a></li>
+        <li class="evidenced"><a href="index.html">VISUALIZZA LAVORATORI PRESENTI</a></li>
+        <li><a href="showallows.html">VISUALIZZA LAVORATORI AMMESSI</a></li>
+        <li><a href="barCodeControl/index.html">TIMBRATORE</a></li>
+    </ul>
+   <!--  <div class="titlecontainer">
+        <h2 class="title">CONTROLLO ACCESSI</h2>
+    </div> -->
     <div id="searchform">
         <label for="searchbyfield">Ricerca</label>
         <select id="searchbyfield" onchange="">
@@ -238,7 +245,6 @@
     <!--  ######### fine risultato ricerca #################################################### -->
     <!-- ############################# fine area ricerca utenti  ################# -->
     <div id="userlist" class="table-wrapper">
-        <h1>Controllo accessi</h1>
         <table class="fl-table">
             <thead>
                 <tr>
