--- a/showallows.html
+++ b/showallows.html
@@ -38,9 +38,14 @@
             });
         });
     </script>
+    <ul>
+        <li><a href="barCodeControl/insertAllows.html">INSERIMENTO NUOVO LAVORATORE AMMESSO</a></li>
+        <li><a href="index.html">VISUALIZZA LAVORATORI PRESENTI</a></li>
+        <li class="evidenced"><a href="showallows.html">VISUALIZZA LAVORATORI AMMESSI</a></li>
+        <li><a href="barCodeControl/index.html">TIMBRATORE</a></li>
+    </ul>
     <div id="userlist" class="table-wrapper">
-        <h1>Soggetti ammessi al cantiere</h1>
-        <table class="fl-table">
+       <table class="fl-table">
             <thead>
                 <tr>
                     <th>Id</th>
