--- a/barCodeControl/index.html
+++ b/barCodeControl/index.html
@@ -12,12 +12,7 @@
 </head>
 
 <body>
-    <ul>
-        <li><a href="insertAllows.html">INSERIMENTO NUOVO LAVORATORE AMMESSO</a><br><br></li>
-        <li><a href="../index.html">VISUALIZZA LAVORATORI PRESENTI</a></li>
-        <li><a href="contact.asp">Contact</a></li>
-        <li><a href="about.asp">About</a></li>
-    </ul>
+
     <script>
 
         function putemploye(inputtype) {
@@ -56,7 +51,17 @@
         }
 
     </script>
-    <h2>CONTROLLO CODICE FISCALE ED INSERIMENTO PRESENZE LAVORATORI</h2>
+
+    <ul>
+        <li><a href="insertAllows.html">INSERIMENTO NUOVO LAVORATORE AMMESSO</a></li>
+        <li><a href="../index.html">VISUALIZZA LAVORATORI PRESENTI</a></li>
+        <li><a href="../showallows.html">VISUALIZZA LAVORATORI AMMESSI</a></li>
+        <li class="evidenced"><a href="index.html">TIMBRATORE</a></li>
+    </ul>
+    <!-- <div class="titlecontainer">
+        <h2 class="title">CONTROLLO CODICE FISCALE ED INSERIMENTO PRESENZE LAVORATORI</h2>
+    </div> -->
+
 
     <form id="inputautomatic">
         <input type="button" value="PASSA AD INSERIMENTO DA TASTIERA" onclick="changeinputtype(0)">
