--- a/barCodeControl/insertAllows.html
+++ b/barCodeControl/insertAllows.html
@@ -42,8 +42,17 @@
 
         }
     </script>
-    <h2>Inserimento lavoratori ammessi</h2>
-    <form>
+    <ul>
+        <li class="evidenced"><a href="insertAllows.html">INSERIMENTO NUOVO LAVORATORE AMMESSO</a></li>
+        <li><a href="../index.html">VISUALIZZA LAVORATORI PRESENTI</a></li>
+        <li><a href="../showallows.html">VISUALIZZA LAVORATORI AMMESSI</a></li>
+        <li><a href="index.html">TIMBRATORE</a></li>
+    </ul>
+    <!-- <div class="titlecontainer">
+        <h2 class="title">INSERIMENTO LAVORATORI AMMESSI</h2>
+    </div> -->
+
+    <form class="formallowinput">
         <input type="text" id="fiscalCode" name="fiscalCode" placeholder="CODICE FISCALE"><br /><br />
         <input type="text" id="nome" name="nome" placeholder="NOME"><br /><br />
         <input type="text" id="cognome" name="cognome" placeholder="COGNOME"><br /><br />
@@ -59,10 +68,8 @@
         <input type="text" id="note" name="note" placeholder="NOTE"><br /><br />
         <input type="button" id="sendbut" onclick="getdata()" value="REGISTRA">
     </form>
-    <div>
-        <br><br>
-        <a href="index.html" class="navigator">VAI A TIMBRATORE</a>
-    </div>
+
+
 </body>
 
 </html>
