--- a/login.html
+++ b/login.html
@@ -7,25 +7,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:700,600' rel='stylesheet' type='text/css'>
     <link href="style.css" rel="stylesheet" type="text/css">
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js"
+        integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 
 <body>
+    <script>
+        function startsessionvar() {
+            let mail = $("#email").val();
+            let password = $("#password").val();
+            $.ajax({
+                url: "check.php",
+                type: "POST",
+                data: {
+                    email: mail,
+                    pw: password
+                },
+                success: function (resp) {
+                    alert(resp);
+                }
+
+            });
+        }
+    </script>
 
 
     <form method="post" id="loginForm" action="index.html">
         <div class="box">
             <h1>ACCESSO</h1>
 
-            <input type="email" name="email" value="email" onFocus="field_focus(this, 'email');"
+            <input type="email" name="email" id="email" value="email" onFocus="field_focus(this, 'email');"
                 onblur="field_blur(this, 'email');" class="email" />
 
-            <input type="password" name="email" value="email" onFocus="field_focus(this, 'email');"
+            <input type="password" name="password" id="password" value="email" onFocus="field_focus(this, 'email');"
                 onblur="field_blur(this, 'email');" class="email" />
 
-            <a href="#">
+            <!-- <a href="#">
                 <div class="btn">Sign In</div>
-            </a> <!-- End Btn -->
+            </a> -->
+            <!-- End Btn -->
+            <input type="button" class="btn" onclick="startsessionvar()" value="ACCESSO">
 
 
 
